discussion/kv_engine/144962/144962_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42224: Fail the node if persistence repeatedly fails header's sync

Change-Id: Ic94969cc8acc08f33eb3e54fff557c36421097fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-02-04 17:42:50.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-04 17:49:23.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6939/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15: error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
    errCode = couchstore_commit(db, kvctx.commitData.commitFatalCallback);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:402:24: note: candidate function not viable: requires single argument "db", but 2 arguments were provided
    couchstore_error_t couchstore_commit(Db *db);
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6939/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6939/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33408/ : FAILURE

CMake error: tlm/cmake/Modules/FindCouchbasePCRE.cmake:53 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33408/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28736/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28736/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7577/ : FAILURE

Compile error at [2021-02-04T17:44:55.454Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7577/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8866/ : FAILURE

Compile error at [2021-02-04T17:44:58.750Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8866/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8517/ : FAILURE

Compile error at [2021-02-04T17:44:01.979Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:73:
error: too many arguments to function ?couchstore_error_t couchstore_commit(Db*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8655/ : FAILURE

Compile error at [2021-02-04T17:44:05.831Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:73:
error: too many arguments to function ?couchstore_error_t couchstore_commit(Db*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8655/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16415/ : FAILURE

Compile error at [2021-02-04T17:46:42.123Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16415/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5476/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
